--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
 
 <body ng-app="Spotifier" ng-controller="MainCtrl">
 
-<h2>Search for artist's</h2>
+<h2>Spotifier</h2>
 </br>
 <div class="row">
 	<div class="col-md-4">
@@ -29,7 +29,7 @@
 	<div class="col-md-4">
 		<div id="custom-search-input">
 			<div class="input-group col-md-12">
-				<input type="text" class="form-control input-lg" placeholder="an artist's name" ng-model="input" required/>
+				<input type="text" class="form-control input-lg" placeholder="search for an artist's name" ng-model="input" required/>
 				<span class="input-group-btn">
                         <button class="btn btn-info btn-lg" type="submit" ng-click="searchFunc()">
                             <i class="glyphicon glyphicon-search"></i>
@@ -47,12 +47,15 @@
 <div class="container-fluid">
 	<table class="table table-hover">
 		<thead>
-		<tr>
+		<tr ng-show ="items.length > 0">
 			<th><a href="" ng-click="order('image')">Image</a></th>
 			<th><a href="" ng-click="order('name')">Name</a></th>
 			<th><a href="" ng-click="order('genres')">Genres</a></th>
 			<th><a href="" ng-click="order('popularity')">Popularity</a></th>
 			<th><a href="" ng-click="order('followers')">Followers</a></th>
+		</tr>
+		<tr ng-show = "items.length ==0">
+			<img ng-src = "https://bankstreetmusic.pbworks.com/f/1348250071/Music.jpeg" height="200" width="500"/>
 		</tr>
 		</thead>
 		<tbody>
